# rust-zip-archive

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  package.yml  release.yml
assets/: make_icon.py
docs/superpowers/plans/: 2026-06-19-gui.md  2026-06-19-multiformat-A-core.md  2026-06-19-packaging.md  2026-06-20-gui-redesign.md  2026-06-20-shell-menu-expand.md  2026-06-20-shell-menu.md
docs/superpowers/specs/: 2026-06-19-gui-design.md  2026-06-19-multiformat-design.md  2026-06-19-packaging-design.md  2026-06-20-gui-redesign-design.md  2026-06-20-shell-menu-design.md  2026-06-20-shell-menu-expand-design.md
packaging/windows/: shell-menu.nsh
src/: archive.rs  cli.rs  lib.rs  main.rs
src/archive/: compressor.rs  format.rs  mod.rs  tar.rs  zip.rs
tests/: cli_formats.rs  detection.rs  formats_compressor.rs  formats_tar.rs  integrity.rs  roundtrip.rs  shell_cli.rs  shell_compress.rs
