[package]
name = "rust-zip-archive"
version = "0.1.0"
edition = "2021"
description = "A simple 7-Zip/WinRAR-style CLI archive utility"
license = "MIT"

[lib]
name = "rust_zip_archive"
path = "src/lib.rs"

[[bin]]
name = "rza"
path = "src/bin/rza.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
zip = { version = "2.2", features = ["deflate", "bzip2", "zstd", "time"] }
walkdir = "2.5"
anyhow = "1.0"
tar = "0.4"
flate2 = "1"
bzip2 = "0.5"
xz2 = "0.1"
zstd = "0.13"
indicatif = "0.17"
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }
rfd = { version = "0.15", optional = true }

[features]
gui = ["dep:eframe", "dep:egui", "dep:rfd"]

[[bin]]
name = "rza-gui"
path = "src/bin/rza-gui.rs"
required-features = ["gui"]

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
