[package]
name = "rust-zip-archive"
version = "0.1.0"
edition = "2021"
description = "A simple 7-Zip/WinRAR-style CLI archive utility"
license = "MIT"

[lib]
name = "rust_zip_archive"
path = "src/lib.rs"

[[bin]]
name = "rza"
path = "src/bin/rza.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
zip = { version = "2.2", features = ["deflate", "bzip2", "zstd", "time"] }
walkdir = "2.5"
anyhow = "1.0"
tar = "0.4"
flate2 = "1"
bzip2 = "0.5"
xz2 = "0.1"
zstd = "0.13"
indicatif = "0.17"
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }
rfd = { version = "0.15", optional = true }
egui_extras = { version = "0.29", optional = true, default-features = false }

[features]
gui = ["dep:eframe", "dep:egui", "dep:rfd", "dep:egui_extras"]

[[bin]]
name = "rza-gui"
path = "src/bin/rza-gui/main.rs"
required-features = ["gui"]

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true

[package.metadata.packager]
product-name = "rza — Archive Utility"
identifier = "com.imnotseanwtf.rza"
description = "A multi-format archive utility (zip, tar, gz, bz2, xz, zst)."
authors = ["imnotseanwtf"]
icons = ["assets/icon.png"]
before-packaging-command = "cargo build --release --features gui"
binaries = [
  { path = "rza-gui", main = true },
  { path = "rza" },
]

[[package.metadata.packager.file-associations]]
extensions = ["zip", "tar", "gz", "tgz", "bz2", "xz", "zst"]
description = "Archive"
