[package]
name = "rust-zip-archive"
version = "0.1.0"
edition = "2021"
description = "A simple 7-Zip/WinRAR-style CLI archive utility"
license = "MIT"

[lib]
name = "rust_zip_archive"
path = "src/lib.rs"

[[bin]]
name = "rza"
path = "src/bin/rza.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
zip = { version = "2.2", features = ["deflate", "bzip2", "zstd", "time"] }
walkdir = "2.5"
anyhow = "1.0"
tar = "0.4"
flate2 = "1"
bzip2 = "0.5"
xz2 = "0.1"
zstd = "0.13"
indicatif = "0.17"
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }
rfd = { version = "0.15", optional = true }
egui_extras = { version = "0.29", optional = true, default-features = false }

[features]
gui = ["dep:eframe", "dep:egui", "dep:rfd", "dep:egui_extras"]

[[bin]]
name = "rza-gui"
path = "src/bin/rza-gui/main.rs"
required-features = ["gui"]

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true

[package.metadata.packager]
product-name = "rza — Archive Utility"
identifier = "com.imnotseanwtf.rza"
description = "A multi-format archive utility (zip, tar, gz, bz2, xz, zst)."
authors = ["imnotseanwtf"]
icons = ["assets/icon.png"]
before-packaging-command = "cargo build --release --features gui"
binaries = [
  { path = "rza-gui", main = true },
  { path = "rza" },
]

[[package.metadata.packager.file-associations]]
extensions = ["zip", "tar", "gz", "tgz", "bz2", "xz", "zst", "7z", "rar"]
mime-type = "application/zip;application/x-tar;application/gzip;application/x-compressed-tar;application/x-bzip2;application/x-xz;application/zstd;application/x-7z-compressed;application/vnd.rar"
description = "Archive"

[package.metadata.packager.nsis]
# Shell context menu: registry writes run as a pre-install section.
# NOTE: cargo-packager 0.11.8 has no uninstall hook — the matching
# DeleteRegKey commands in packaging/windows/shell-menu.nsh cannot be
# wired automatically.  A future version with an uninstall-section key,
# or a fully custom NSIS template (nsis.template), is needed for cleanup.
preinstall-section = """
  Section ShellMenu
    ; --- Archive types: cascading "rza" submenu ---
    ; .zip
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.zip\\shell\\rza" "MUIVerb" "rza"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.zip\\shell\\rza" "SubCommands" ""
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.zip\\shell\\rza\\shell\\01here" "" "Extract Here"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.zip\\shell\\rza\\shell\\01here\\command" "" '"$INSTDIR\\rza.exe" extract-here "%1"'
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.zip\\shell\\rza\\shell\\02to" "" "Extract to folder"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.zip\\shell\\rza\\shell\\02to\\command" "" '"$INSTDIR\\rza.exe" extract-to "%1"'
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.zip\\shell\\rza\\shell\\03open" "" "Open with rza"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.zip\\shell\\rza\\shell\\03open\\command" "" '"$INSTDIR\\rza-gui.exe" "%1"'
    ; .tar
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.tar\\shell\\rza" "MUIVerb" "rza"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.tar\\shell\\rza" "SubCommands" ""
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.tar\\shell\\rza\\shell\\01here" "" "Extract Here"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.tar\\shell\\rza\\shell\\01here\\command" "" '"$INSTDIR\\rza.exe" extract-here "%1"'
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.tar\\shell\\rza\\shell\\02to" "" "Extract to folder"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.tar\\shell\\rza\\shell\\02to\\command" "" '"$INSTDIR\\rza.exe" extract-to "%1"'
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.tar\\shell\\rza\\shell\\03open" "" "Open with rza"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.tar\\shell\\rza\\shell\\03open\\command" "" '"$INSTDIR\\rza-gui.exe" "%1"'
    ; .gz
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.gz\\shell\\rza" "MUIVerb" "rza"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.gz\\shell\\rza" "SubCommands" ""
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.gz\\shell\\rza\\shell\\01here" "" "Extract Here"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.gz\\shell\\rza\\shell\\01here\\command" "" '"$INSTDIR\\rza.exe" extract-here "%1"'
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.gz\\shell\\rza\\shell\\02to" "" "Extract to folder"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.gz\\shell\\rza\\shell\\02to\\command" "" '"$INSTDIR\\rza.exe" extract-to "%1"'
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.gz\\shell\\rza\\shell\\03open" "" "Open with rza"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.gz\\shell\\rza\\shell\\03open\\command" "" '"$INSTDIR\\rza-gui.exe" "%1"'
    ; .tgz
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.tgz\\shell\\rza" "MUIVerb" "rza"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.tgz\\shell\\rza" "SubCommands" ""
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.tgz\\shell\\rza\\shell\\01here" "" "Extract Here"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.tgz\\shell\\rza\\shell\\01here\\command" "" '"$INSTDIR\\rza.exe" extract-here "%1"'
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.tgz\\shell\\rza\\shell\\02to" "" "Extract to folder"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.tgz\\shell\\rza\\shell\\02to\\command" "" '"$INSTDIR\\rza.exe" extract-to "%1"'
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.tgz\\shell\\rza\\shell\\03open" "" "Open with rza"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.tgz\\shell\\rza\\shell\\03open\\command" "" '"$INSTDIR\\rza-gui.exe" "%1"'
    ; .bz2
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.bz2\\shell\\rza" "MUIVerb" "rza"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.bz2\\shell\\rza" "SubCommands" ""
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.bz2\\shell\\rza\\shell\\01here" "" "Extract Here"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.bz2\\shell\\rza\\shell\\01here\\command" "" '"$INSTDIR\\rza.exe" extract-here "%1"'
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.bz2\\shell\\rza\\shell\\02to" "" "Extract to folder"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.bz2\\shell\\rza\\shell\\02to\\command" "" '"$INSTDIR\\rza.exe" extract-to "%1"'
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.bz2\\shell\\rza\\shell\\03open" "" "Open with rza"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.bz2\\shell\\rza\\shell\\03open\\command" "" '"$INSTDIR\\rza-gui.exe" "%1"'
    ; .xz
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.xz\\shell\\rza" "MUIVerb" "rza"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.xz\\shell\\rza" "SubCommands" ""
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.xz\\shell\\rza\\shell\\01here" "" "Extract Here"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.xz\\shell\\rza\\shell\\01here\\command" "" '"$INSTDIR\\rza.exe" extract-here "%1"'
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.xz\\shell\\rza\\shell\\02to" "" "Extract to folder"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.xz\\shell\\rza\\shell\\02to\\command" "" '"$INSTDIR\\rza.exe" extract-to "%1"'
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.xz\\shell\\rza\\shell\\03open" "" "Open with rza"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.xz\\shell\\rza\\shell\\03open\\command" "" '"$INSTDIR\\rza-gui.exe" "%1"'
    ; .zst
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.zst\\shell\\rza" "MUIVerb" "rza"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.zst\\shell\\rza" "SubCommands" ""
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.zst\\shell\\rza\\shell\\01here" "" "Extract Here"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.zst\\shell\\rza\\shell\\01here\\command" "" '"$INSTDIR\\rza.exe" extract-here "%1"'
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.zst\\shell\\rza\\shell\\02to" "" "Extract to folder"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.zst\\shell\\rza\\shell\\02to\\command" "" '"$INSTDIR\\rza.exe" extract-to "%1"'
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.zst\\shell\\rza\\shell\\03open" "" "Open with rza"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.zst\\shell\\rza\\shell\\03open\\command" "" '"$INSTDIR\\rza-gui.exe" "%1"'
    ; .7z
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.7z\\shell\\rza" "MUIVerb" "rza"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.7z\\shell\\rza" "SubCommands" ""
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.7z\\shell\\rza\\shell\\01here" "" "Extract Here"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.7z\\shell\\rza\\shell\\01here\\command" "" '"$INSTDIR\\rza.exe" extract-here "%1"'
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.7z\\shell\\rza\\shell\\02to" "" "Extract to folder"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.7z\\shell\\rza\\shell\\02to\\command" "" '"$INSTDIR\\rza.exe" extract-to "%1"'
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.7z\\shell\\rza\\shell\\03open" "" "Open with rza"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.7z\\shell\\rza\\shell\\03open\\command" "" '"$INSTDIR\\rza-gui.exe" "%1"'
    ; .rar
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.rar\\shell\\rza" "MUIVerb" "rza"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.rar\\shell\\rza" "SubCommands" ""
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.rar\\shell\\rza\\shell\\01here" "" "Extract Here"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.rar\\shell\\rza\\shell\\01here\\command" "" '"$INSTDIR\\rza.exe" extract-here "%1"'
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.rar\\shell\\rza\\shell\\02to" "" "Extract to folder"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.rar\\shell\\rza\\shell\\02to\\command" "" '"$INSTDIR\\rza.exe" extract-to "%1"'
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.rar\\shell\\rza\\shell\\03open" "" "Open with rza"
    WriteRegStr HKCU "Software\\Classes\\SystemFileAssociations\\.rar\\shell\\rza\\shell\\03open\\command" "" '"$INSTDIR\\rza-gui.exe" "%1"'
    ; --- All files: "Add to archive (rza)..." ---
    WriteRegStr HKCU "Software\\Classes\\*\\shell\\rza.add" "" "Add to archive (rza)..."
    WriteRegStr HKCU "Software\\Classes\\*\\shell\\rza.add\\command" "" '"$INSTDIR\\rza-gui.exe" "%1"'
  SectionEnd
"""
